methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:11: error: not enough arguments for method b: (c: java.awt.Color)Unit.
Unspecified value parameter c.
def growFlowers(){for (i<-1 to 4){b();droite();avance(4)}} 
                                   ^