methods.flowerpot.FlowerPot.scala.code
def b(c:Color){setCouleurBrosse(c);a();avance(2);a();recule();droite();avance();a;recule(2);a();avance();setCouleurBrosse(Color.YELLOW)}








def a(){baisseBrosse();leveBrosse()}
def growFlowers(){for (i<-1 to 4){b();droite();avance(4)}}